--- a/src/components/About.css
+++ b/src/components/About.css
@@ -16,9 +16,17 @@
   margin-top: 100px;
 }
 
-#skill__table tr {
+#skills__table__col {
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
 p {
   color: inherit !important;
+}
+
+@media only screen and (max-width: 600px) {
+  #skills__table__col {
+    margin-top: 100px;
+  }
 }
