--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -45,3 +45,14 @@ button:hover #work__btn__icon {
   left: 0;
   z-index: -5;
 }
+
+@media only screen and (max-width: 490px) {
+  #header__container {
+    height: 100vh;
+    background: url(../images/nebula.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    z-index: 99;
+  }
+}
