Remove unused logo in index.html. Update styling for Project.js & About.js header font

--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,6 +1,14 @@
+#project__container {
+  background-color: #f7f7f7;
+  margin-top: 100px;
+  padding-bottom: 130px;
+}
+
 #project__title {
   text-align: center;
   padding: 75px 0 75px 0;
+  font-weight: 600;
+  font-size: 48px;
 }
 .project__button {
   padding: 10px;
