--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,4 +1,4 @@
-#project__container {
+.project__container {
   background-color: #f7f7f7;
   margin-top: 100px;
   padding-bottom: 130px;
@@ -33,4 +33,9 @@
   .portfolio__cards {
     margin-bottom: 50px;
   }
+}
+
+.dark {
+  background: #333;
+  color: white;
 }
