--- a/src/components/ThemeSelector.css
+++ b/src/components/ThemeSelector.css
@@ -1,5 +1,12 @@
 .mode-toggle img {
-  width: 24px;
-  height: 24px;
+  width: 54px;
+  height: 54px;
   cursor: pointer;
+  margin: 20px;
+}
+
+.mode-toggle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
