--- a/src/components/BlogList.css
+++ b/src/components/BlogList.css
@@ -5,10 +5,12 @@
 
 .blog-cards {
   min-height: 300px;
+  margin-top: 120px;
 }
 
 .blog-container {
   background-color: #495057;
+  background-image: linear-gradient(180deg, #495057 0%, #717b95 100%);
   padding: 50px 0 100px 0;
 }
 
@@ -21,6 +23,7 @@
   border-radius: 0px;
   color: black;
   transition: 0.5s ease-in-out;
+  border-radius: 5px;
 }
 
 #blog__btn:hover {
