Update ThemeSelector styling on dark/light mode toggle. Update Projects styling on dark/light mode toggle.

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -5,7 +5,8 @@
 
 .about__container {
   overflow: hidden;
-  margin-bottom: 70px;
+  padding-bottom: 70px;
+  background-color: #eaeaea;
 }
 
 #headshot {
