--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,5 +1,5 @@
 .project__container {
-  background-color: #f7f7f7;
+  background-color: #eaeaea;
   padding-top: 100px;
   padding-bottom: 130px;
 }
