Update font, icon, and image styles in About.js, Projects.js, and Contact.js

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Montserrat, Arial, Helvetica, sans-serif;
+  font-family: Montserrat, Arial, Helvetica, sans-serif !important;
 }
 
 .dark {
